add profile photo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main-container">
         <aside class="picture-wrapper">
-        <img class="profile-photo" src="img/8DBC436A-BA83-473C-9DE1-F45977F82D41.jpg"profile photo of Janusz Janero">
+        <img class="profile-photo" src="img/linkedinJJ.png"profile photo of Janusz Janero">
     </aside>
     <main class="about">
         <header class="info-wrapper">
