change profilephoto and resize

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <div class="main-container">
         <aside class="picture-wrapper">
-        <img class="profile-photo" src="img/linkedinJJ.png"profile photo of Janusz Janero">
+        <!-- <img class="profile-photo" src="img/linkedinJJ.png"profile photo of Janusz Janero"> -->
+        <img class="profile-photo" src="img/IMG_2886.jpg"profile photo of Janusz Janero">
     </aside>
     <main class="about">
         <header class="info-wrapper">
